--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+body {
+  font-family: 'Poppins', Helvetica;
+  background-color: steelblue;
+  color: white;
+}
+
 code {
   background: #d0d0d5;
 }
@@ -52,7 +60,7 @@ input[type="button"] {
 }
 
 .highlight {
-  color: green;
+  color: Aquamarine;
 }
 
 #text-input {
